Cleaned up some of the styles on smaller devices to avoid overflow. Hooked up audio to play button.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,8 +37,28 @@
   src: url('../public/fonts/Lora-BoldItalic.ttf') format("ttf");
 }
 
+.container {
+  @apply flex flex-col mx-auto w-full max-w-7xl min-h-screen p-6 sm:p-12 md:p-24 lg:p-48
+}
+
+.container__sub { 
+  @apply flex flex-col w-full gap-8
+}
+
+.container__input {
+  @apply relative flex items-center
+}
+
+.container__notfound {
+  @apply flex flex-col gap-8 items-center content-center pt-16 justify-center
+}
+
+.header {
+  @apply flex items-center justify-between w-full px-2 sm:px-6
+}
+
 .input {
-  @apply block font-bold text-xl w-full placeholder:text-neutral-700 dark:placeholder:text-primary-300 bg-neutral-500 dark:bg-primary-700 rounded-2xl border-0 py-6 pr-14 pl-5 text-primary-900 dark:text-neutral-100 focus:ring-2 focus:ring-inset focus:ring-accent-primary transition-colors duration-200 ease-in
+  @apply block font-bold text-sm md:text-xl w-full placeholder:text-neutral-700 dark:placeholder:text-primary-300 bg-neutral-500 dark:bg-primary-700 rounded-2xl border-0 py-6 pr-14 pl-5 text-primary-900 dark:text-neutral-100 focus:ring-2 focus:ring-inset focus:ring-accent-primary transition-colors duration-200 ease-in
 }
 
 
